--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Lamin's Portfolio</title>
 </head>
+
 <body>
-   <h1>Lamin K's Portfolio</h1> 
-   <h2>I am a newbie in Web Development.</h2>
-   <hr>
-   <a href="./public/movie_ranking.html">Movie Ranking Project</a>
-   <img src="./assets/images/movie_ranking.png" alt="Movie ranking project preview">
-   <a href="./public/birthday_invite.html">Birthday Invite Project</a>
-   <img src="./assets/images/birthday_invite.png" alt="Birthday Cake">
-    <hr>
-   <a href="./public/about.html">About Me</a> 
-   <a href="./public/contact.html">Contact Me</a>
+  <h1>Lamin K Sanneh's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie_ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie_ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday_invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
 </body>
+
 </html>
